refactor(identity/infrastructure) split persistence adapters, MfaProperties, social mocks, lombok entities
Adapters
- Rename AccountDeletionAdapter, DataExportAdapter, PasswordResetAdapter to PersistenceAdapter suffix
- Inline RegistrationSessionRedisManager and RegistrationRedisKeyManager into RedisRegistrationSessionStore
- Add IdentityUserEntitySaveSupport for persistence flow

Auth
- AccessTokenIssuerAdapter implements parseClaims and keeps Claims private
- Add MockGoogleSocialTokenVerifier and MockFacebookSocialTokenVerifier with matchIfMissing fallback
- Remote verifiers gated by ConditionalOnProperty provider=remote

Bean conditions
- RedisRegistrationRateLimiter and InMemoryRegistrationRateLimiter gated by identity.registration.ratelimit.provider
- RedisUserOtpChallengeStore and InMemoryUserOtpChallengeStore gated by identity.account.otp-challenge.provider

Properties
- Extract MfaProperties from AuthProperties at prefix identity.mfa
- Add KycProperties, SocialAuthProperties, AuthCookieProperties, AccountManagementProperties as standalone records
- Drop bcryptPasswordEncoder Bean and unused signatureExpirySeconds field

Persistence
- UserEntity to Lombok Getter Setter Builder NoArgsConstructor AllArgsConstructor
- Move geography entities under persistence/entity/geography (separate from domain)
- Drop AccountDeletionRequestMapper, DataExportRequestMapper, UserConsentDomainMapper, RemoteMediaUploadSignatureProvider
- Trim unused repository methods

KYC and Security
- Move KYC adapters into infrastructure/kyc package
- Add IdentityProviderConfigurationValidator
- Add MfaSecretCipher, DefaultTotpManager, SecurityRequestAttributeKeys
- BearerAuthenticationFilter switches to AccessTokenIssuerPort + AccessTokenClaims